[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Blog/portfolio"
authors = ["Oscar Peace <oscar@oscarcp.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
Flask = "^3.1.0"
gunicorn = "^23.0.0"
flask-htmx = "^0.4.0"
markdown = "^3.7"
pillow = "^11.0.0"
flask-wtf = "^1.2.2"
flask-limiter = "^3.9.2"
argon2-cffi = "^23.1.0"
requests = "^2.32.3"
flask-compress = "^1.17"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
flask-caching = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
